-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
Cluster Scalability
-
Fully Compatible
-
ALL
-
ClusterScalability Jul7-Jul20
-
None
-
None
-
None
-
None
-
None
-
None
-
None
Data race condition
The value of the shared data will be determined by the interleaving of thread execution. Thread shared data is accessed without holding an appropriate lock, possibly causing a race condition
/data/mci/7b5199136d945ea4e1751b7b3bd3d384/bazel_cache/658afbbc91b088dd7e554f8eea998579/execroot/_main/src/mongo/db/s/resharding/resharding_donor_service.cpp:1070: MISSING_LOCK 175458 Accessing "this->_changeStreamMonitorStartTimeSelected" without holding lock "mongo::ReshardingDonorService::DonorStateMachine._mutex". Elsewhere, "mongo::ReshardingDonorService::DonorStateMachine._changeStreamMonitorStartTimeSelected" is written to with "DonorStateMachine._mutex" held 1 out of 1 times.
- is duplicated by
-
SERVER-109535 Coverity analysis defect 150216: Data race condition
-
- Closed
-
- is related to
-
SERVER-107569 Coverity analysis defect 175460: Data race condition
-
- Closed
-
- related to
-
SERVER-107571 Coverity analysis defect 175452: Data race condition
-
- Closed
-