SERVER-107570 SERVER-107569 SERVER-107571 Fix race in accessing shared promise futures (#38858)

GitOrigin-RevId: f66f812eb0b9b368850441cc2f14a9ee232e5cd1